--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,34 +8,61 @@ $quaternary-color: #F5F5F5;
 $quinary-color: #D9D9D9;
 $senary-color: #FFFFFF;
 
-// font-sizes
-$font-size-xxs: 12px;
-$font-size-xs: 14px;
-$font-size-s: 16px;
-$font-size-m: 18px;
-$font-size-l: 20px;
-$font-size-xl: 24px;
-$font-size-xxl: 32px;
-$font-size-xxxl: 48px;
-
 // fonts
-$font-family-roboto: "Roboto", sans-serif;
-$font-family-raleway: "Raleway", sans-serif;
+$ff-roboto: "Roboto", sans-serif;
+$ff-raleway: "Raleway", sans-serif;
+
+// font-sizes
+// Padding
+$p-xs: 0.25rem;
+$p-sm: 0.5rem;
+$p-md: 0.75rem;
+$p-lg: 1rem;
+$p-xl: 1.5rem;
+$p-2xl: 2rem;
+$p-3xl: 3rem;
+$p-4xl: 4rem;
+$p-5xl: 5rem;
+$p-6xl: 6rem;
+
+// Margin
+$m-xs: 0.25rem;
+$m-sm: 0.5rem;
+$m-md: 0.75rem;
+$m-lg: 1rem;
+$m-xl: 1.5rem;
+$m-2xl: 2rem;
+$m-3xl: 3rem;
+$m-4xl: 4rem;
+$m-5xl: 5rem;
+$m-6xl: 6rem;
+
+// Font-size
+$fs-xs: 0.25rem;
+$fs-sm: 0.5rem;
+$fs-md: 0.75rem;
+$fs-lg: 1rem;
+$fs-xl: 1.5rem;
+$fs-2xl: 2rem;
+$fs-3xl: 3rem;
+$fs-4xl: 4rem;
+$fs-5xl: 5rem;
+$fs-6xl: 6rem;
 
 // font-weight
-$font-weight-thin: 100;
-$font-weight-light: 300;
-$font-weight-regular: 400;
-$font-weight-bold: 700;
+$fw-thin: 100;
+$fw-light: 300;
+$fw-regular: 400;
+$fw-bold: 700;
 
 
 // font mixins
-$roboto-thin: $font-weight-thin $font-family-roboto;
-$roboto-light: $font-weight-light $font-family-roboto;
-$roboto-regular: $font-weight-regular $font-family-roboto;
-$roboto-bold: $font-weight-bold $font-family-roboto;
+$roboto-thin: $fw-thin $ff-roboto;
+$roboto-light: $fw-light $ff-roboto;
+$roboto-regular: $fw-regular $ff-roboto;
+$roboto-bold: $fw-bold $ff-roboto;
 
-$raleway-thin: $font-weight-thin $font-family-raleway;
-$raleway-light: $font-weight-light $font-family-raleway;
-$raleway-regular: $font-weight-regular $font-family-raleway;
-$raleway-bold: $font-weight-bold $font-family-raleway;
+$raleway-thin: $fw-thin $ff-raleway;
+$raleway-light: $fw-light $ff-raleway;
+$raleway-regular: $fw-regular $ff-raleway;
+$raleway-bold: $fw-bold $ff-raleway;
