--- a/src/common/components/Header/style.scss
+++ b/src/common/components/Header/style.scss
@@ -1,15 +1,47 @@
-.HeaderComponent{
-    padding: 80px 60px ;
-    position: fixed;
-    width: 100%;
-    ul{
-    padding: 0;
-    display: flex;
-    list-style: none;
-    white-space: nowrap;
-.header__menu-item{
-    padding:0px 29px;
-    font-size: 12px;
-}}
-}
 
+@import '../../../assets/scss/index.scss';
+
+.HeaderComponent {
+    .header {
+      position: fixed;
+      width: 100%;
+        padding: $p-2xl $p-xl;
+        height: 3rem;
+        text-transform: uppercase;
+      &__logo{
+        background-image: url('/');
+      }
+      &__nav {
+        padding: $p-lg 0;
+        margin: 0 auto;
+      }
+      &__menu {
+          display: flex;
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          &-item {
+            font-size: $fs-md;
+            flex:1;
+            padding: 0 $p-sm;
+            white-space: nowrap;
+          }
+        }
+      
+  
+      &__cta-btn {
+        border-radius: 2rem;
+        background-color: $tertiary-color;
+        color: $senary-color;
+        font-size: $fs-md;
+        padding: $p-lg $p-3xl;
+        border: none;
+        white-space: nowrap;
+        cursor: pointer;
+        &:hover {
+          background-color: darken($tertiary-color, 10%);
+        }
+      }
+    }
+  }
+  
