--- a/src/common/components/Home/components/Certificates/style.scss
+++ b/src/common/components/Home/components/Certificates/style.scss
@@ -1,8 +1,16 @@
-.carousel-item{
-    div{
-        padding-top:1rem;
-        width: 7rem;
-        height: 7rem;
-        background:#ff0000;
+@import '../../../../../assets/scss/index.scss';
+
+.CertificatesComponent {
+    .certificates {
+        display: flex;
+        width: 100%;
+
+        img {
+            flex: 1;
+            object-fit: contain;
+            height: 4rem;
+            filter: grayscale(100%);
+        }
+        padding: $p-2xl 0;
     }
 }
